--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -6,7 +6,7 @@
           <div class="card shadow-lg p-4">
             <div class="card-body">
               <div class="text-center">
-                <h2><i class="material-icons">recycling</i>.msgRecyclingRewards</h2>
+                <h2><i class="fa-solid fa-leaf"></i> .msgRecyclingRewards</h2>
                 <h5 class="card-title mt-4 mb-5">Account Login</h5>
               </div>
               <div *ngIf="state.dataState === DataState.ERROR" class="alert alert-danger position-relative" role="alert">
