--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -51,7 +51,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img [src]="user?.imageUrl" [alt]="user?.firstName" class="user-avatar-md rounded-circle" style="width: 28px; height: 28px;">
+            <img [src]="user?.imageUrl || 'https://img.freepik.com/free-icon/user_318-159711.jpg'" alt="User Avatar" class="user-avatar-md rounded-circle" style="width: 28px; height: 28px;">
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/profile']"><i class="fa-solid fa-user"></i> {{ user?.firstName }} {{ user?.lastName }}</a></li>
