--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -29,64 +29,55 @@ body {
 }
 
 
-/*.highlight {*/
-/*  background-color: yellow;*/
-/*  font-weight: bold;*/
-/*}*/
-/*!* Add these styles to your component's CSS file *!*/
-
-/*.badge-soft-ewaste {*/
-/*  color: #fff !important;*/
-/*  background-color: #f3ad1a;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-aluminium {*/
-/*  color: #fff !important;*/
-/*  background-color: #948b8b;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-plastic {*/
-/*  color: #fff !important;*/
-/*  background-color: #f56e6e;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-paper {*/
-/*  color: #fff !important;*/
-/*  background-color: #63ad6f;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-glass {*/
-/*  color: #fff !important;*/
-/*  background-color: #3b76e1;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-metals {*/
-/*  color: #fff !important;*/
-/*  background-color: rgba(183, 61, 61, 0.89);*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*.badge-soft-plastic {*/
-/*  color: #fff !important;*/
-/*  background-color: #f56e6e;*/
-/*  font-size: 12px;*/
-/*}*/
-
-/*table th {*/
-/*  font-weight: 600;*/
-/*  background-color: #eeecfd !important;*/
-/*}*/
-
-
 .accepted-materials {
   display: flex;
   gap: 5px; /* Adjust the spacing between badges as needed */
 }
 
 
+.order-card {
+  color: #fff;
+}
+
+.bg-c-blue {
+  background: linear-gradient(45deg, rgba(23, 168, 201, 0.89), rgba(71, 120, 211, 0.91));
+}
+
+.bg-c-green {
+  background: linear-gradient(45deg, rgba(27, 150, 99, 0.93), rgba(73, 210, 148, 0.94));
+}
+
+.bg-c-yellow {
+  background: linear-gradient(45deg,#FFB64D,#ffcb80);
+}
+
+.bg-c-pink {
+  background: linear-gradient(45deg,#FF5370,#ff869a);
+}
+
+
+.card {
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+  box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+  border: none;
+  margin-bottom: 30px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.card .card-block {
+  padding: 25px;
+}
+
+.order-card i {
+  font-size: 26px;
+}
+
+
+
+.f-right {
+  float: right;
+  margin-top: 30px;
+}
 
