--- a/src/app/component/stats/stats.component.html
+++ b/src/app/component/stats/stats.component.html
@@ -22,7 +22,7 @@
         <div class="card-body d-flex align-items-center">
           <div>
             <p class="mb-0 text-secondary">My Environmental Impact</p>
-            <h4 class="my-1 text-danger"> {{ userSustainabilityIndex }}%</h4>
+            <h4 class="my-1 text-danger"> {{ userRewardPoints | sustainabilityIndex  }}%</h4>
             <p class="mb-0 font-13">my environmental impact in <strong>{{ currentMonth | date: 'MMMM'}}</strong></p>
           </div>
           <div class="widgets-icons-2 rounded-circle bg-gradient-bloody text-white ms-auto">
@@ -38,7 +38,7 @@
         <div class="card-body d-flex align-items-center">
           <div>
             <p class="mb-0 text-secondary">Global Environmental Impact</p>
-            <h4 class="my-1 text-success">{{ recyclersSustainabilityIndex}}%</h4>
+            <h4 class="my-1 text-success">{{ recyclersRewardPoints | sustainabilityIndex}}%</h4>
             <p class="mb-0 font-13">of the planet is positively impacted by us</p>
           </div>
           <div class="widgets-icons-2 rounded-circle bg-gradient-ohhappiness text-white ms-auto">
