--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -41,6 +41,7 @@
                       [typeahead]="counties"
                       [minLength]="0"
                       [typeaheadWaitMs]="0"
+                      [contentEditable]="false"
                       placeholder="Select County"
                       class="form-control"
                       (typeaheadOnSelect)="onSelectCounty($event)"
@@ -54,6 +55,7 @@
                       [disabled]="state.dataState === DataState.LOADING"
                       formControlName="city"
                       [typeahead]="cities"
+                      [contentEditable]="false"
                       [minLength]="0"
                       [typeaheadWaitMs]="0"
                       placeholder="Select City"
