--- a/src/app/component/voucher-details/voucher-details.component.html
+++ b/src/app/component/voucher-details/voucher-details.component.html
@@ -64,7 +64,7 @@
                       <strong class="text-inverse">.msg-recycling-rewards.io</strong><br>
 <!--                      Calea Torontalului 1A,<br>-->
                       Address: 300668, Timisoara, Romania<br>
-                      Email: recycling-rewards@msg.com<br>
+                      Email: recycling.rewards@msg.com<br>
                       Phone: +40 733 900 010<br>
                     </address>
                   </div>
@@ -124,7 +124,7 @@
                   </div>
                   <p class="text-center contact-details">
                     <span><i class="fa fa-leaf"></i> Visit Us: msg-recycling-rewards.io</span> <br>
-                    <span><i class="fa-solid fa-envelope"></i> Email: recycling-rewards@msg.com</span><br>
+                    <span><i class="fa-solid fa-envelope"></i> Email: recycling.rewards@msg.com</span><br>
                     <span><i class="fa-solid fa-phone"></i> Call: +40 733 900 010 / +40 743 211 312</span><br>
                   </p>
 
