--- a/src/app/component/voucher-details/voucher-details.component.css
+++ b/src/app/component/voucher-details/voucher-details.component.css
@@ -151,7 +151,7 @@
 
 .voucher-price .voucher-price-left::after,
 .voucher-price .voucher-price-right::before {
-  content: '\00a0'; /* Non-breaking space */
-  margin: 0 5px; /* Adjust the margin as needed */
+  content: '\00a0';
+  margin: 0 5px;
   display: inline-block;
 }
